Remove meta tag for client hints

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Device Details</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
   <!-- <meta http-equiv="Accept-CH" content="Sec-CH-UA, Sec-CH-UA-Full-Version-List, Sec-CH-UA-Model, Sec-CH-UA-Mobile, Sec-CH-UA-Platform, Sec-CH-UA-Platform-Version"> -->
-  <meta http-equiv="Delegate-CH" content="Sec-CH-UA https://owsdk-stagingams.pubmatic.com; Sec-CH-UA-Full-Version-List https://owsdk-stagingams.pubmatic.com; Sec-CH-UA-Model https://owsdk-stagingams.pubmatic.com; Sec-CH-UA-Mobile https://owsdk-stagingams.pubmatic.com; Sec-CH-UA-Platform https://owsdk-stagingams.pubmatic.com; Sec-CH-UA-Platform-Version https://owsdk-stagingams.pubmatic.com;">
+  <!-- <meta http-equiv="Delegate-CH" content="Sec-CH-UA https://owsdk-stagingams.pubmatic.com; Sec-CH-UA-Full-Version-List https://owsdk-stagingams.pubmatic.com; Sec-CH-UA-Model https://owsdk-stagingams.pubmatic.com; Sec-CH-UA-Mobile https://owsdk-stagingams.pubmatic.com; Sec-CH-UA-Platform https://owsdk-stagingams.pubmatic.com; Sec-CH-UA-Platform-Version https://owsdk-stagingams.pubmatic.com;"> -->
   <script src="https://owsdk-stagingams.pubmatic.com:8443/sdk/android-devicemodel/android-device-model.js"></script>
   <script>
     // navigator.userAgentData.getHighEntropyValues(['platformVersion', 'model', ]).then(ua => { 
